Modal styling - fixed background - better positioning

--- a/src/components/Onboarding/SignUpFlow/style.module.less
+++ b/src/components/Onboarding/SignUpFlow/style.module.less
@@ -1,9 +1,9 @@
 @import '../../../components/style/vars.less';
 
 .signupContainer {
-  margin: 2rem 0;
-  padding: 1rem;
-
+  max-width: 30rem;
+  margin: 0 auto;
+  padding: 0 1rem;
   background-color: @white;
   color: @black;
   --bg-color: @white;
@@ -14,6 +14,10 @@
   --button-bg-color: @violetTransparent;
   --button-hover-bg-color: @violet;
   --button-hover-font-color: @white; */
+
+  h3 {
+    margin-top: 0;
+  }
 
   .message {
     background-color: lawngreen;
