--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -1,8 +1,8 @@
 @import '../../components/style/vars.less';
 
 .onboardingContent {
-  padding: 5rem;
-  width: 90%;
+  padding: 2rem;
+  width: 100%;
   height: 100%;
   overflow: auto;
   /* Hide scrollbar */
@@ -20,7 +20,7 @@
   padding: 1rem 2rem;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2rem;
+  //margin-top: 2rem;
   margin-bottom: 2rem;
 
   background-color: @white;
