--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -85,8 +85,9 @@
   bottom: 0;
   left: 0;
   right: 0;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px) brightness(0.5);
+  backdrop-filter: blur(5px) brightness(0.5);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .modalStyle {
