Better focus style for image upload

--- a/src/components/Forms/ImageUpload/style.module.less
+++ b/src/components/Forms/ImageUpload/style.module.less
@@ -60,8 +60,9 @@
   }
 
   &:focus-within {
-    border: 1px solid @violet;
-    border-radius: 50%;
+    .avatarImage {
+      border: 3px solid @violet;
+    }
   }
 }
 
