Fixed a few issues for accessability

--- a/src/components/Forms/DonationForm/style.module.less
+++ b/src/components/Forms/DonationForm/style.module.less
@@ -38,6 +38,7 @@
     margin-bottom: 1rem;
     min-width: 10rem;
     text-align: center;
+    background-color: transparent;
   }
 
   .selectionElement:hover {
