--- a/src/components/Onboarding/Donate/style.module.less
+++ b/src/components/Onboarding/Donate/style.module.less
@@ -8,7 +8,8 @@
   font-size: @MobileFontSizeXL;
   border: 1px solid @violet;
   cursor: pointer;
-
+  background-color: transparent;
+  width: 100%;
   &:hover {
     background-color: @violet;
     color: white;
