--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -222,6 +222,7 @@
   font-size: @MobileFontSizeXL;
   border: 1px solid @violet;
   cursor: pointer;
+  background-color: transparent;
 
   &:hover {
     background-color: @violet;
