--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -152,3 +152,9 @@
     text-align: center;
   }
 }
+
+.referredUsersMessage {
+  margin-top: 1rem;
+  padding: 0 1rem;
+  font-size: @DesktopFontSizeL;
+}
