--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -2,6 +2,7 @@
 
 .onboardingContent {
   width: 100%;
+  height: 90%;
   overflow: auto;
   /* Hide scrollbar */
   -ms-overflow-style: none; /* IE and Edge */
