--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -104,6 +104,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
+  padding-bottom: 2rem;
 }
 
 /* if backdrop support: very transparent and blurred */
