Small style fixes

--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -89,6 +89,7 @@
   padding-bottom: 0.6em;
   width: 100%;
   background: @aqua;
+  font-size: 1rem;
   text-align: center;
   color: white;
   text-decoration: none;
