--- a/src/components/Overlay/style.module.less
+++ b/src/components/Overlay/style.module.less
@@ -85,9 +85,13 @@
   bottom: 0;
   left: 0;
   right: 0;
-  -webkit-backdrop-filter: blur(5px) brightness(0.5);
-  backdrop-filter: blur(5px) brightness(0.5);
-  background-color: rgba(0, 0, 0, 0.8);
+  -webkit-backdrop-filter: blur(30px) brightness(0.8);
+  backdrop-filter: blur(30px) brightness(0.8);
+
+  /* slightly transparent fallback for Firefox (not supporting backdrop-filter) */
+  @supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+    background-color: rgba(255, 255, 255, 0.8);
+  }
 }
 
 .modalStyle {
