Profile refactoring - accessibility improved

--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -119,6 +119,24 @@
   margin: 0;
 }
 
+.linkLikeFormattedButton {
+  background-color: transparent;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  margin: 0;
+  font-size: @DesktopFontSizeM;
+  &:hover {
+    background-color: transparent;
+    outline: none;
+    border: none;
+  }
+
+  &.onWhiteBackground {
+    color: black;
+  }
+}
+
 .alignRight {
   text-align: right;
 }
