Leaderboard new Design

--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -7,8 +7,6 @@
 
 .tableBody {
   border-collapse: collapse;
-  border-right: 1px solid #ddd;
-  border-left: 1px solid #ddd;
   width: 100%;
 
   &.tableBody th {
@@ -26,10 +24,10 @@
 }
 
 .tableRow {
-  color: white;
+  color: black;
+  background: @violetLight;
   &:nth-child(odd) {
-    background: @violetLight;
-    color: white;
+    background: @white;
   }
 }
 
@@ -50,6 +48,7 @@
   text-align: center;
 
   &:hover {
+    color: @white;
     background-color: @red;
   }
 
@@ -61,34 +60,28 @@
 
 .pageSelectorContainer {
   display: flex;
-  border-bottom: 1px solid #ddd;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
   margin-bottom: 3rem;
 }
 
 .tabSelectorElement {
   padding: 1rem 0.25rem 0.7rem;
-  border-top: 1px solid lightgrey;
-
-  border-right: 1px solid lightgrey;
-  border-bottom: 1px solid #ddd;
-  // border-top-left-radius: 10px;
-  // border-top-right-radius: 10px;
-  color: @white;
+  color: black;
   cursor: pointer;
-  flex-grow: 1;
   text-align: center;
+  min-width: 25%;
+  margin: 0 0.25rem;
+  background: @white; // fallback for IE
+  background: var(--button-bg-color);
+  font-size: @DesktopFontSizeS;
+  font-weight: 600;
 
   &:hover {
+    color: @white;
     background-color: @red;
   }
 
   &.activeTabSelector {
     padding: calc(1rem - 1px) 0.25rem 0.7rem;
-    border-top: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: none;
     background: @white;
     color: @violet;
   }
@@ -96,6 +89,7 @@
   &:first-child {
     border-left: 1px solid lightgrey;
     border-left: 1px solid #ddd;
+    margin-left: 0;
   }
 }
 
