Expandable municipality info section, leaderboard styling

--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -17,9 +17,7 @@
   &.tableBody td,
   &.tableBody tr {
     border: none;
-    padding: 8px;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding: 1rem 2rem;
   }
 }
 
