Expandable Row, styling and functionality, PopperJS offset modifier removed

--- a/src/components/Municipality/Leaderboard/style.module.less
+++ b/src/components/Municipality/Leaderboard/style.module.less
@@ -23,7 +23,7 @@
 
 .tableRow {
   color: black;
-  background: @violetLight;
+  background: lighten(@violetLight, 10%);
   &:nth-child(odd) {
     background: @white;
   }
