--- a/src/components/Municipality/MapAndSearch/style.module.less
+++ b/src/components/Municipality/MapAndSearch/style.module.less
@@ -130,7 +130,7 @@
   margin-top: 1rem;
 }
 
-.extendableRow {
+.expandableRow {
   position: relative;
 }
 
@@ -142,10 +142,6 @@
   border-bottom: 8.6px solid transparent;
   animation-name: rotateTriangle;
   background: none;
-
-  position: absolute;
-  top: 1.5rem;
-  right: 0rem;
 
   &:hover {
     background: none;
@@ -160,6 +156,9 @@
   margin: 0;
   background: none;
   cursor: pointer;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.75rem;
 }
 
 .animateTriangle {
