--- a/src/components/QuestionUbi/ListQuestions/style.module.less
+++ b/src/components/QuestionUbi/ListQuestions/style.module.less
@@ -5,6 +5,7 @@
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   font-size: @DesktopFontSizeS;
+  margin-bottom: 2rem;
 
   @media (max-width: @breakPointS) {
     display: flex;
