Changed collection bar design and added a title

--- a/src/components/CampaignVisualisations/style.module.less
+++ b/src/components/CampaignVisualisations/style.module.less
@@ -34,7 +34,6 @@
 .barGoal {
   position: absolute;
   border: var(--font-color);
-  color: var(--bg-color);
   height: 5rem;
   width: 100%;
   font-size: @DesktopFontSizeM;
@@ -292,7 +291,7 @@
 }
 
 .hint {
-  margin-bottom: 1rem;
+  margin: 1rem 0;
   font-weight: normal;
   font-size: @DesktopFontSizeS;
 
