--- a/src/components/Municipality/MunicipalityCampaignVisualisations/style.module.less
+++ b/src/components/Municipality/MunicipalityCampaignVisualisations/style.module.less
@@ -2,6 +2,6 @@
     margin-top: 2rem;
 }
 
-.municipalitySignatureBarContainer {
-    margin-bottom: 2rem;
+:last-child.municipalitySignatureBarContainer {
+    margin-top: 4rem;
 }
