--- a/src/components/Municipality/MapAndSearch/style.module.less
+++ b/src/components/Municipality/MapAndSearch/style.module.less
@@ -142,6 +142,7 @@
   border-bottom: 8.6px solid transparent;
   animation-name: rotateTriangle;
   background: none;
+  transform: rotate(0deg);
 
   &:hover {
     background: none;
