--- a/src/components/Forms/Meetup/style.module.less
+++ b/src/components/Forms/Meetup/style.module.less
@@ -1,30 +1,65 @@
 @import '../../style/vars.less';
 
-.selectionContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 2rem;
+.section {
+  width: 100%;
+  padding: 1rem 2rem;
+  height: 90%;
+  overflow: auto;
+  /* Hide scrollbar */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-.selectionElement {
-  border: @borderWidthThick solid @violet;
+.chosenLocation {
+  font-weight: bold;
+}
+
+.coloredText {
   color: @violet;
-  font-size: 1.25rem;
-  padding: 1.2rem 2rem 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  min-width: 10rem;
-  text-align: center;
-  background-color: transparent;
 }
 
-.selectionElement:hover {
-  cursor: pointer;
-  background-color: @violet;
-  color: @white;
+.formSection {
+  margin-bottom: 0;
 }
 
-.selectionElementActive {
-  background-color: @violet;
-  color: @white;
+.inlineFieldSection {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+
+  @media (max-width: @breakPointM) {
+    flex-direction: column;
+  }
+}
+
+.eventText {
+  padding-top: 2.5rem;
+  font-size: @DesktopFontSizeM;
+
+  @media (max-width: @breakPointM) {
+    padding-top: 0;
+  }
+}
+
+.textarea {
+  width: 100%;
+  min-height: 10rem;
+
+  &.shortTextarea {
+    min-height: 6rem;
+  }
+}
+
+.textInput {
+  width: 100%;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: flex-end;
 }
