--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -1,5 +1,50 @@
 @import '../style/vars.less';
 
+:global {
+  .mapboxgl-ctrl-geocoder {
+    color: @violet !important;
+    border: 2px solid @violet;
+    font-family: inherit !important;
+    border-radius: 25px !important;
+
+    @media (max-width: @breakPointM) {
+      width: 70% !important;
+    }
+
+    .mapboxgl-ctrl-geocoder--icon-search {
+      width: 25px !important;
+      height: 25px !important;
+      fill: @violet !important;
+
+      // Specific breakpoint of mapbox stylesheet
+      @media (min-width: 640px) {
+        top: 6px !important;
+      }
+
+      @media (max-width: 640px) {
+        top: 13px !important;
+      }
+    }
+
+    .mapboxgl-ctrl-geocoder--input {
+      color: @violet !important;
+
+      &::placeholder {
+        color: @greyMedium !important;
+      }
+
+      &:focus {
+        @media (min-width: @breakPointM) {
+          top: 13px !important;
+          border-radius: 25px !important;
+          outline: none;
+          box-shadow: inset 0 0 0 @borderWidthThick @violet;
+        }
+      }
+    }
+  }
+}
+
 .container {
   height: 40rem;
   max-height: 60vh;
