Adapted question to ubi for pledge package

--- a/src/components/QuestionUbi/CreateQuestion/style.module.less
+++ b/src/components/QuestionUbi/CreateQuestion/style.module.less
@@ -31,7 +31,7 @@
 }
 
 .submitButton {
-  visibility: hidden;
+  // visibility: hidden;
   margin-top: 1rem;
 }
 
@@ -69,4 +69,9 @@
 
 .createQuestionProfile {
   max-width: 80px;
+}
+
+.error {
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
 }
