Changed desktop styles for profile tile

--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -16,6 +16,7 @@
 
 @DesktopFontSizeXXL: 6.25rem; // HUGE, Use only in special cases
 @DesktopFontSizeXL: 3.375rem; // For big headlines
+@DesktopFontSizeLL: 2.125rem; // For in between headlines - use sparingly
 @DesktopFontSizeL: 1.75rem; // For smaller headlines and teaser texts
 @DesktopFontSizeM: 1.25rem; // Normal body text size
 @DesktopFontSizeS: 1rem; // For hints / image captions
