--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -4,13 +4,19 @@
   margin: auto;
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
-  padding: 3rem;
-  background: @aqua;
+  padding: 3rem 2rem 3rem 0;
+  background: @violet;
   color: @white;
+  font-weight: normal;
+
+  @media (max-width: @breakPointS) {
+    flex-wrap: wrap;
+  }
 
   p {
     font-size: @DesktopFontSizeM;
+    margin: 0.7rem 0;
+
     @media (max-width: @breakPointM) {
       font-size: @MobileFontSizeM;
       margin-bottom: 1.5rem;
@@ -27,6 +33,20 @@
     font-weight: bold;
     font-size: @DesktopFontSizeL;
   }
+}
+
+&.sectionViolet {
+  background-color: @violet;
+  color: @white;
+  --bg-color: @violet;
+  --font-color: @white;
+  --secondary-color: @white;
+  --text-on-secondary-color: @black;
+  --button-font-color: @white;
+  --button-bg-color: @black; // IE Fallback
+  --button-bg-color: @whiteTransparent;
+  --button-hover-bg-color: @white;
+  --button-hover-font-color: @violet;
 }
 
 &.sectionAqua {
@@ -60,7 +80,7 @@
 }
 
 .flexElement {
-  width: 47.5%;
+  //width: 47.5%;
 
   @media (max-width: @breakPointL) {
     width: 100%;
@@ -69,8 +89,10 @@
 
 .headline {
   margin-top: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.4rem;
   color: @white !important;
+  font-size: @DesktopFontSizeLL;
+
   @media (max-width: @breakPointM) {
     margin-top: 1.5rem;
   }
@@ -78,11 +100,11 @@
 
 .avatarAndInfo {
   margin: 0 auto;
-  width: 47.5%;
   display: flex;
-  justify-content: space-between;
-  align-content: flex-start;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+
   @media (max-width: @breakPointL) {
     width: 100%;
     margin-bottom: 4rem;
@@ -91,9 +113,8 @@
 }
 
 .avatar {
-  width: 7em;
-  height: 7em;
-  margin-right: 0.75rem;
+  width: 8em;
+  height: 8em;
 
   @media (max-width: @breakPointS) {
     margin-bottom: 1.5rem;
@@ -103,8 +124,6 @@
 
 .info {
   min-width: 270px;
-  width: 70%;
-  margin-left: 0.75rem;
   @media (max-width: @breakPointL) {
     width: 50%;
   }
@@ -124,7 +143,7 @@
   font-size: @DesktopFontSizeM;
   list-style-type: none;
   padding-left: 0;
-  margin-left: 0;
+  margin: 0;
 
   li {
     margin-bottom: 0.25rem;
@@ -144,6 +163,15 @@
     line-height: 1.625rem;
     margin-bottom: 2rem;
   }
+}
+
+.userCity,
+.userCreated {
+  font-size: @DesktopFontSizeS;
+}
+
+.userCreated {
+  opacity: 0.6
 }
 
 .centerMobile {
