--- a/src/components/Forms/Meetup/style.module.less
+++ b/src/components/Forms/Meetup/style.module.less
@@ -8,11 +8,16 @@
   /* Hide scrollbar */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  position: absolute;
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
     display: none;
   }
+}
+
+.message {
+  margin: 5rem 2rem;
 }
 
 .chosenLocation {
