Profile Tile mobile styles

--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -11,6 +11,7 @@
 
   @media (max-width: @breakPointS) {
     flex-wrap: wrap;
+    padding-left: 2rem;
   }
 
   p {
@@ -24,6 +25,7 @@
     @media (max-width: @breakPointS) {
       font-size: @MobileFontSizeM;
       line-height: 1.625rem;
+      text-align: center;
     }
   }
 
@@ -107,7 +109,7 @@
 
   @media (max-width: @breakPointL) {
     width: 100%;
-    margin-bottom: 4rem;
+    //margin-bottom: 4rem;
     justify-content: center;
   }
 }
@@ -115,11 +117,6 @@
 .avatar {
   width: 8em;
   height: 8em;
-
-  @media (max-width: @breakPointS) {
-    margin-bottom: 1.5rem;
-    margin-right: 0;
-  }
 }
 
 .info {
