--- a/src/components/Profile/ProfileTile/style.module.less
+++ b/src/components/Profile/ProfileTile/style.module.less
@@ -1,13 +1,16 @@
 @import '../../../components/style/vars.less';
 
 .tileContainer {
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  padding: 3rem 2rem 3rem 0;
+  padding: 3rem 2rem 2rem 0;
   background: @violet;
   color: @white;
   font-weight: normal;
+}
+
+.tileFlexContainer {
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
 
   @media (max-width: @breakPointS) {
     flex-wrap: wrap;
@@ -168,7 +171,7 @@
 }
 
 .userCreated {
-  opacity: 0.6
+  opacity: 0.6;
 }
 
 .centerMobile {
@@ -179,6 +182,8 @@
 
 .referredUsersMessage {
   margin-top: 1rem;
-  padding: 0 1rem;
-  font-size: @DesktopFontSizeL;
+  padding: 0.5rem;
+  padding-left: 2rem;
+  font-size: @DesktopFontSizeM;
+  text-align: center;
 }
