--- a/src/components/QuestionUbi/ListQuestions/style.module.less
+++ b/src/components/QuestionUbi/ListQuestions/style.module.less
@@ -5,7 +5,6 @@
   grid-gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   font-size: @DesktopFontSizeS;
-  margin-bottom: 2rem;
 
   @media (max-width: @breakPointS) {
     display: flex;
@@ -70,4 +69,12 @@
   100% {
     transform: translateY(0);
   }
+}
+
+.headingViolet {
+  color: @violet;
+}
+
+.CTA {
+  margin: 4rem 0;
 }
