--- a/src/components/Layout/Header/Menu/style.module.less
+++ b/src/components/Layout/Header/Menu/style.module.less
@@ -15,7 +15,7 @@
     top: 100%;
     width: 100%;
     padding: 1rem;
-    background: @grey;
+    background: @white;
     display: none;
     height: auto;
 
