Added border to menu to make it easier to distinguish from content

--- a/src/components/Layout/Header/Menu/style.module.less
+++ b/src/components/Layout/Header/Menu/style.module.less
@@ -18,6 +18,7 @@
     background: @white;
     display: none;
     height: auto;
+    border-bottom: 1px solid black;
 
     &.isOpen,
     &:focus-within {
