--- a/src/components/Onboarding/Share/style.module.less
+++ b/src/components/Onboarding/Share/style.module.less
@@ -35,6 +35,7 @@
   flex-wrap: wrap;
   justify-content: center;
   flex: 1 1 180px;
+  align-items: center;
   padding: 0 1.5rem 0 1rem;
   height: 100%;
 
@@ -78,16 +79,24 @@
   height: 2rem;
   margin-top: 1rem;
 }
+
+.shareIcon {
+  margin-right: 0.5rem;
+  width: 3rem;
+}
+
 .iconInstagram {
   margin-right: 1rem;
-  margin-left: 1rem;
   width: 2rem;
   height: 2rem;
-  margin-top: 1rem;
+}
+
+.iconMail {
+  width: 3.5rem;
 }
 
 .iconCorrection {
-  margin-top: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .sharePreviewContainer {
