--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -1,6 +1,19 @@
 @import '../style/vars.less';
 
 :global {
+  .mapboxgl-map {
+    overflow: visible !important;
+  }
+
+  .mapboxgl-canvas-container {
+    overflow: hidden;
+    position: relative;
+  }
+
+  .mapboxgl-canvas {
+    position: relative !important;
+  }
+
   .mapboxgl-ctrl-geocoder {
     color: @violet !important;
     border: 2px solid @violet;
@@ -43,15 +56,48 @@
       }
     }
   }
+
+  .mapboxgl-popup-close-button {
+    margin: 0.5rem;
+    color: @violet;
+    background: #f0f0f0;
+
+    &:hover {
+      color: @violetLight;
+    }
+  }
+
+  .mapboxgl-popup-content {
+    overflow: auto;
+    border: 1px solid @violet;
+    border-radius: 2px !important;
+    width: 25rem;
+  }
+
+  .mapboxgl-ctrl-bottom-right {
+    z-index: 0 !important;
+  }
+}
+
+// Needed for overflowing popup if there is two maps (e.g. in Bremen)
+.mapSection {
+  position: relative;
+  z-index: 1;
 }
 
 .container {
   height: 40rem;
   max-height: 60vh;
-  color: @red;
+  color: @violet;
 }
 
 .tooltip {
+  padding: 1.5rem;
+  color: @black;
+  font-family: 'Ideal', Tahoma, Arial, Helvetica, sans-serif;
+  font-size: @DesktopFontSizeS;
+  max-height: 25rem;
+
   hr {
     border: 0;
     background: currentColor;
@@ -69,12 +115,50 @@
   }
 }
 
-.tooltopTitle {
+.tooltipTitle {
+  font-weight: bold;
+  font-size: @DesktopFontSizeM;
+  margin-bottom: 1rem;
+  margin-top: 0;
+  color: @violet;
+}
+
+.tooltipHeading {
+  color: @violet;
+  font-size: @DesktopFontSizeS;
+  font-weight: normal;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.tooltipTimeAndPlace {
+  display: flex;
+  font-size: @DesktopFontSizeXS;
+}
+
+.tooltipInfoWithIcon {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.tooltipIcon {
+  height: 1.6rem;
+}
+
+.tooltipDate,
+.tooltipLocation {
+  margin-left: 0.5rem;
+}
+
+.tooltipDay,
+.tooltipAddress {
   font-weight: bold;
 }
 
-.tooltopDate {
-  font-style: italic;
+.tooltipTime,
+.tooltipZipCode {
+  opacity: 0.5;
 }
 
 .popUpOutside {
