Smaller popup on mobile

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -73,6 +73,10 @@
     border-radius: 2px !important;
     width: 25rem;
     max-height: 25rem;
+
+    @media (max-width: @breakPointM) {
+      width: 20rem;
+    }
   }
 
   .mapboxgl-ctrl-bottom-right {
