- Added hidden heading for signup component - Clearer Label for signup button

--- a/src/components/TickerToSignup/style.module.less
+++ b/src/components/TickerToSignup/style.module.less
@@ -9,3 +9,12 @@
 .centerButton {
   margin: 0 auto;
 }
+
+.hidden-heading {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
