--- a/src/components/Layout/Header/Menu/style.module.less
+++ b/src/components/Layout/Header/Menu/style.module.less
@@ -200,3 +200,12 @@
     margin-left: 0;
   }
 }
+
+.hiddenLink {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
