Fixed position of "close button" in map popup

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -61,6 +61,9 @@
     margin: 0.5rem;
     color: @violet;
     background: #f0f0f0;
+    position: fixed !important;
+    top: 1rem !important;
+    right: -8.75rem !important;
 
     &:hover {
       color: @violetLight;
