Renamed /questions endpoint to /interactions, renamed component to PledgePackage

--- a/src/components/PledgePackage/CreatePledgePackage/style.module.less
+++ b/src/components/PledgePackage/CreatePledgePackage/style.module.less
@@ -39,7 +39,7 @@
   visibility: visible;
 }
 
-.questionInput {
+.bodyInput {
   color: inherit;
   background: transparent;
   padding: 2rem;
@@ -67,7 +67,7 @@
   margin-top: 1rem;
 }
 
-.createQuestionProfile {
+.avatar {
   max-width: 80px;
 }
 
