--- a/src/components/Profile/ProfilePledgePackage/style.module.less
+++ b/src/components/Profile/ProfilePledgePackage/style.module.less
@@ -1,6 +1,6 @@
 @import '../../style/vars.less';
 
-.createQuestionSection {
+.createPledgePackageSection {
   --button-font-color: @white;
   --button-bg-color: @whiteTransparent;
   --button-hover-bg-color: @white;
