--- a/src/components/Forms/TextInput/style.module.less
+++ b/src/components/Forms/TextInput/style.module.less
@@ -59,4 +59,11 @@
   text-align: right;
   max-width: 100%;
   width: @inputWidth;
+
+  &.onWhite {
+    position: absolute;
+    bottom: 0.5rem;
+    right: 1.5rem;
+    color: @violet;
+  }
 }
