Avatar image add sizing in "px"

--- a/src/components/PledgePackage/ListPledgePackages/style.module.less
+++ b/src/components/PledgePackage/ListPledgePackages/style.module.less
@@ -39,8 +39,8 @@
 }
 
 .avatar {
-  width: 3.5rem;
-  height: 3.5rem;
+  width: 60px;
+  height: 60px;
   position: absolute;
   top: 3.5rem;
   left: 5.5rem;
