--- a/src/components/Profile/style.module.less
+++ b/src/components/Profile/style.module.less
@@ -23,8 +23,8 @@
 }
 
 .avatar {
-  width: 7em;
-  height: 7em;
+  width: 120px;
+  height: 120px;
 
   @media (max-width: @breakPointS) {
     margin-bottom: 1.5rem;
