--- a/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
+++ b/src/components/Municipality/MunicipalityMap/MapTooltip/style.module.less
@@ -11,7 +11,7 @@
   pointer-events: none;
   padding: 1.5rem;
   z-index: 3;
-  color: rgba(255,255,255,0.9);
+  color: rgba(255, 255, 255, 0.9);
   border: 2px solid #fff;
   transform: translateX(-50%) translateY(5px);
   -ms-user-select: none;
