Hotfix: Changed colors for headlines on purple background

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -51,6 +51,11 @@
     --button-bg-color: @whiteTransparent;
     --button-hover-bg-color: @white;
     --button-hover-font-color: @violet;
+    h1,
+    h2,
+    h3 {
+      color: @white;
+    }
   }
 
   &.sectionAqua {
