Hotfix for broken colors

--- a/src/components/Municipality/MapAndSearch/style.module.less
+++ b/src/components/Municipality/MapAndSearch/style.module.less
@@ -132,6 +132,13 @@
 
 .expandableRow {
   position: relative;
+
+  // Quick fix until I find a better solution
+  h1,
+  h2,
+  h3 {
+    color: @black !important;
+  }
 }
 
 .triangle {
