--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -212,3 +212,38 @@ h3 {
     bottom: 0;
   }
 }
+
+.eventContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.eventDay {
+  flex: 50%;
+  min-width: 50%;
+  max-width: 50%;
+}
+
+.moduleHeading {
+  margin-top: 6rem;
+  margin-bottom: 4rem;
+  color: @violet;
+  font-size: @DesktopFontSizeXL;
+}
+
+.descriptionHeading {
+  margin: 0;
+  color: @violet;
+  font-size: 2.25rem;
+}
+
+.eventDescription {
+  margin-top: 1rem;
+  margin-bottom: 3rem;
+  font-size: 1.5rem;
+}
+
+.descriptionText {
+  margin: 0;
+  font-size: 1.5rem;
+}
