Create event flex input fields

--- a/src/components/Forms/Meetup/style.module.less
+++ b/src/components/Forms/Meetup/style.module.less
@@ -22,6 +22,7 @@
 
 .chosenLocation {
   font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 .coloredText {
@@ -30,6 +31,11 @@
 
 .formSection {
   margin-bottom: 0;
+}
+
+.formContainer {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .inlineFieldSection {
@@ -52,10 +58,17 @@
 
 .timeInputRow {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.dateInputRow {
+  margin-top: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .timeInput {
-  margin-right: 1rem;
+  margin-right: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .textarea {
