--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -43,6 +43,13 @@
     border-color: darken(@violet, 10%);
     //box-shadow: inset 0 0 0 @borderWidthThick var(--button-hover-font-color);
   }
+
+  &.disabled {
+    cursor: not-allowed;
+    border-color: @greyMedium;
+    background: @greyBright;
+    color: @greyMedium;
+  }
 }
 
 .linkButton {
