Changed small buttons to normal buttons

--- a/src/components/style/vars.less
+++ b/src/components/style/vars.less
@@ -13,6 +13,7 @@
 
 @violetTransparent: rgba(120, 95, 255, 0.2);
 @whiteTransparent: rgba(255, 255, 255, 0.2);
+@aquaTransparent: rgba(70, 180, 180, 0.2);
 
 @DesktopFontSizeXXL: 6.25rem; // HUGE, Use only in special cases
 @DesktopFontSizeXL: 3.375rem; // For big headlines
