--- a/src/components/Forms/Button/style.module.less
+++ b/src/components/Forms/Button/style.module.less
@@ -22,13 +22,7 @@
   }
 
   &.small {
-    font-size: @DesktopFontSizeXS;
-    border-radius: 5px;
-    padding-top: 5px;
-    padding-bottom: 1px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 1em;
+    padding: 0.5rem 1.5rem 0.25rem 1.5rem;
   }
 
   &:hover {
@@ -98,9 +92,14 @@ p a.linkButton {
   .inlineButton {
     font-size: @DesktopFontSizeM;
     font-weight: bold;
+
+    @media (max-width: @breakPointS) {
+      margin-top: 1rem;
+    }
   }
 
   @media (max-width: @breakPointS) {
     width: 100%;
+    flex-direction: column-reverse;
   }
 }
