--- a/src/components/Profile/PersonalSettings/style.module.less
+++ b/src/components/Profile/PersonalSettings/style.module.less
@@ -7,6 +7,12 @@
   @media (max-width: @breakPointM) {
     display: block;
   }
+
+  --button-font-color: @white;
+  --button-bg-color: @black; // IE Fallback
+  --button-bg-color: @whiteTransparent;
+  --button-hover-bg-color: @white;
+  --button-hover-font-color: @aqua;
 }
 
 .userInfo {
@@ -57,20 +63,6 @@
   margin-top: 0.5em;
 }
 
-.mobileBtn {
-  border: @white solid 1px;
-  color: @white;
-
-  &:hover {
-    background-color: @white;
-    color: @red;
-  }
-
-  @media (max-width: @breakPointM) {
-    margin-top: 1em;
-  }
-}
-
 .editTextInput {
   margin-bottom: 1em;
 }
@@ -85,6 +77,11 @@
 
 .revokeButton {
   margin: 0.5rem;
+  --button-font-color: @aqua;
+  --button-bg-color: @black; // IE Fallback
+  --button-bg-color: @aquaTransparent;
+  --button-hover-bg-color: @aqua;
+  --button-hover-font-color: @white;
 }
 
 .revokeButtonRow {
