--- a/src/components/Profile/ProfileDonationSettings/style.module.less
+++ b/src/components/Profile/ProfileDonationSettings/style.module.less
@@ -28,7 +28,10 @@
 }
 
 .revokeButtonRow {
-  margin-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
 }
 
 .loadingMessageContainer {
