Changed button to add newsletter and fixed heading

--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -119,5 +119,11 @@
   margin-top: @inputButtonMargin;
   margin-bottom: @inputButtonMargin;
   color: @white;
-  border: @white solid 1px;
+  border: @white solid;
+  background-color: @whiteTransparent;
+
+  &:hover {
+    color: @aqua;
+    background-color: @white;
+  }
 }
