--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -65,7 +65,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 74rem;
-  padding: 2rem 2rem 0 2rem;
+  padding: 0 2rem 0 2rem;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
@@ -105,16 +105,11 @@
   }
 
   &:last-child {
-    width: 25%;
+    width: 100%;
     -moz-border-radius: 0 4px 4px 0;
     -webkit-border-radius: 0;
     border-radius: 0 4px 4px 0;
-    clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 20% 50%, 0% 0%);
-
-    @media (max-width: @breakPointM) {
-      width: 50%;
-      clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 10% 50%, 0% 0%);
-    }
+    clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 5% 50%, 0% 0%);
   }
 
   // &:nth-child(even) {
@@ -127,6 +122,7 @@
 
   &:hover {
     background: lighten(@violet, 5%);
+    color: black;
   }
 }
 
