--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -254,10 +254,12 @@ h3 {
 .eventDescription {
   margin-top: 1rem;
   margin-bottom: 3rem;
+  padding-right: 1rem;
   font-size: 1.5rem;
 
   @media (max-width: @breakPointM) {
     font-size: 1rem;
+    padding-right: 0rem;
   }
 }
 
