Make modal scrollable again

--- a/src/components/Onboarding/style.module.less
+++ b/src/components/Onboarding/style.module.less
@@ -1,6 +1,7 @@
 @import '../../components/style/vars.less';
 
 .onboardingContent {
+  margin-top: 0.5rem;
   width: 100%;
   height: 90%;
   overflow: auto;
