Set heading in login component explicitly white

--- a/src/components/Login/style.module.less
+++ b/src/components/Login/style.module.less
@@ -1,4 +1,4 @@
-@import '../../style/vars.less';
+@import '../style/vars.less';
 
 .buttonContainer {
   margin-bottom: 1.2rem;
@@ -30,4 +30,8 @@
   margin: 0;
   text-align: center;
   font-size: @DesktopFontSizeS;
+}
+
+.headingWhite {
+  color: white;
 }
