Style packages that were set to done

--- a/src/components/PledgePackage/ListPledgePackages/style.module.less
+++ b/src/components/PledgePackage/ListPledgePackages/style.module.less
@@ -30,8 +30,9 @@
 
 .packageIconContainer {
   position: relative;
-  width: 11rem;
+  width: 9.5rem;
   height: 7.5rem;
+  margin-right: 1.5rem;
 }
 
 .packageTextContainer {
@@ -42,6 +43,11 @@
   position: absolute;
 }
 
+.checkIcon {
+  height: 0.8rem;
+  margin: 0rem 0.5rem 0 0;
+}
+
 .avatar {
   width: 60px;
   height: 60px;
@@ -50,7 +56,7 @@
   left: 5.5rem;
 }
 
-.doneOption {
+.setDone {
   position: absolute;
   top: 7.75rem;
   font-size: 0.95rem;
@@ -58,6 +64,20 @@
   margin: 0;
   padding: 0;
 }
+
+.isDone {
+  position: absolute;
+  top: 7.75rem;
+  font-size: 0.95rem;
+  line-height: 1;
+  text-align: center;
+  margin: 0;
+  padding: 0.5rem 0.5rem 0.35rem;
+  background: @aqua;
+  color: white;
+  width: 100%;
+}
+
 .loadingPackageUpdate {
   position: absolute;
   top: 6rem;
