Removed heroImageOverlay entirely for now

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -425,7 +425,7 @@
 
 .heroImageOverlay {
   background: @white;
-  // background: linear-gradient(0deg, @white, transparent);
+  background: linear-gradient(0deg, @white, transparent);
   position: absolute;
   top: 0;
   left: 0;
