--- a/src/components/Lottery/style.module.less
+++ b/src/components/Lottery/style.module.less
@@ -1,12 +1,5 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 30rem;
-}
-
-.buttonText {
-  text-align: center;
+.primaryButtonContainer {
+  margin: 2rem 0;
 }
 
 .buttonContainer {
