Styling and show correct user

--- a/src/components/PledgePackage/ListPledgePackages/style.module.less
+++ b/src/components/PledgePackage/ListPledgePackages/style.module.less
@@ -26,10 +26,10 @@
 }
 
 .flexItem {
-  max-width: 40%;
+  width: 45%;
 
   @media (max-width: @breakPointM) {
-    max-width: 100%;
+    width: 100%;
   }
 }
 
@@ -153,9 +153,13 @@
 }
 
 .CTA {
-  margin: 4rem 0;
+  margin: 4rem 0 3rem;
 }
 
-.listThree {
+.packagesColumnLeft {
+  margin: 2rem 0 6rem;
+}
+
+.packagesColumnRight {
   margin: 2rem 0;
 }
