Add package icon if user has none yet

--- a/src/components/PledgePackage/ListPledgePackages/style.module.less
+++ b/src/components/PledgePackage/ListPledgePackages/style.module.less
@@ -153,11 +153,11 @@
 }
 
 .CTA {
-  margin: 4rem 0 3rem;
+  margin: 2rem 0;
 }
 
 .packagesColumnLeft {
-  margin: 2rem 0 6rem;
+  margin: 2rem 0 5rem;
 }
 
 .packagesColumnRight {
