Map: filter by type and day

--- a/src/components/Maps/style.module.less
+++ b/src/components/Maps/style.module.less
@@ -271,3 +271,10 @@ h3 {
     font-size: 1rem;
   }
 }
+
+.filter {
+  display: flex;
+  flex-direction: row;
+  width: 30%;
+  justify-content: space-between;
+}
